--- a/grow_with_math/start.html
+++ b/grow_with_math/start.html
@@ -11,13 +11,13 @@
         <a href=".\math_\addition.html" class="grid-item">
             <img src=".\images\button\addition_button.png"  alt="addition-button">
         </a>
-        <a href="page2.html" class="grid-item">
+        <a href=".\math_\subtraction.html" class="grid-item">
             <img src=".\images\button\subtraction_button.png" alt="subtraction-button">
         </a>
-        <a href="page3.html" class="grid-item">
+        <a href=".\math_\multiplication.html" class="grid-item">
             <img src=".\images\button\multiplication_button.png" alt="multiplication-button">
         </a>
-        <a href="page4.html" class="grid-item">
+        <a href=".\math_\division.html" class="grid-item">
             <img src=".\images\button\division_button.png" alt="division-button">
         </a>
     </div>
